# iceberg-rust

./: .gitignore  .history  CLAUDE.md  Cargo.toml  Makefile  README.md
catalogs/iceberg-glue-catalog/: Cargo.toml
catalogs/iceberg-glue-catalog/src/: error.rs  lib.rs  schema.rs  utils.rs
catalogs/iceberg-rest-catalog/: Cargo.toml  README.md
catalogs/iceberg-rest-catalog/src/: catalog.rs  configuration_rewriter.rs  error.rs  lib.rs  oauth2_client_credentials.rs
catalogs/iceberg-s3tables-catalog/: Cargo.toml
catalogs/iceberg-s3tables-catalog/src/: error.rs  lib.rs
datafusion-iceberg-sql/: Cargo.toml
datafusion-iceberg-sql/src/: context.rs  lib.rs  schema.rs
datafusion_iceberg/: Cargo.toml  README.md
datafusion_iceberg/examples/: dataframe.rs  insert_csv.rs  insert_table.rs  refresh_materialized_view.rs
datafusion_iceberg/src/: error.rs  insert.rs  lib.rs  materialized_view.rs  planner.rs  pruning_statistics.rs  sql.rs  statistics.rs  table.rs
datafusion_iceberg/src/catalog/: catalog.rs  catalog_list.rs  context.rs  mirror.rs  mod.rs  schema.rs
datafusion_iceberg/src/materialized_view/: mod.rs
datafusion_iceberg/src/optimizer/: cardinality.rs  cost.rs  mod.rs  precedence_graph.rs  query_graph.rs  selectivity.rs
datafusion_iceberg/src/table/: dv_exec.rs  mod.rs
datafusion_iceberg/testdata/tpch/: customer.csv  lineitem.csv  lineitem_1.csv  lineitem_2.csv  lineitem_3.csv  lineitem_4.csv  lineitem_5.csv  orders.csv
datafusion_iceberg/tests/: empty_insert.rs  equality_delete.rs  insert_csv.rs  insert_sequence_number.rs  integration_df_create_table.rs  integration_df_ctas.rs  integration_df_dml.rs  integration_df_filters.rs  integration_df_namespace_sql.rs  integration_df_query.rs  integration_df_subqueries.rs  integration_df_types.rs  integration_df_unsupported.rs  integration_df_views.rs  integration_pyiceberg.rs  integration_spark.rs  integration_spark_alter_table.rs  integration_spark_branch_tag_ddl.rs  integration_spark_create_table.rs  integration_spark_ctas.rs  integration_spark_dml.rs  integration_spark_namespace_sql.rs  integration_spark_partition_evolution.rs  integration_spark_procedures.rs  integration_spark_procedures_extra.rs  integration_spark_query.rs  integration_spark_row_dml.rs  integration_spark_time_travel.rs  integration_spark_write_distribution.rs  integration_trino.rs  materialized_view_incremental.rs  materialized_view_incremental_aggregate.rs  materialized_view_incremental_join.rs  table_statistics.rs  upstream_sql_engine_placeholders.rs
datafusion_iceberg/tests/df_common/: mod.rs
datafusion_iceberg/tests/spark/: spark.sql
datafusion_iceberg/tests/spark_common/: mod.rs
datafusion_iceberg/tests/trino/: trino.sql
datafusion_iceberg_catalog_rest/: Cargo.toml  README.md
datafusion_iceberg_catalog_rest/src/: catalog.rs  lib.rs  mirror.rs  schema.rs
iceberg-c/: Cargo.toml  README.md  build.rs  iceberg.h  iceberg_c.h
iceberg-c/src/: catalog.rs  lib.rs  object_store.rs  realtion.rs
iceberg-c/src/table/: mod.rs  table_builder.rs  transaction.rs
iceberg-catalog-sql/: Cargo.toml
iceberg-catalog-sql/src/: error.rs  lib.rs
iceberg-file-catalog/: Cargo.toml
iceberg-file-catalog/src/: error.rs  lib.rs
iceberg-glue-catalog/: Cargo.toml
iceberg-glue-catalog/src/: error.rs  lib.rs  schema.rs
iceberg-rest-catalog/: Cargo.toml  README.md
iceberg-rest-catalog/src/: catalog.rs  error.rs  lib.rs
iceberg-rest-catalog/src/apis/: catalog_api_api.rs  mod.rs
iceberg-rest-catalog/src/models/: catalog_config.rs  commit_table_request.rs  commit_table_response.rs  commit_view_request.rs  create_namespace_request.rs  create_namespace_response.rs  create_table_request.rs  create_view_request.rs  error_model.rs  get_namespace_response.rs  iceberg_error_response.rs  list_tables_response.rs  load_view_result.rs  mod.rs  o_auth_error.rs  o_auth_token_response.rs  register_table_request.rs  token_type.rs
iceberg-rust/: Cargo.toml  README.md
iceberg-rust-spec/: Cargo.toml
iceberg-rust-spec/src/: error.rs  lib.rs  util.rs
iceberg-rust-spec/src/arrow/: mod.rs  schema.rs
iceberg-rust-spec/src/spec/: deletion_vector.rs  expressions.rs  identifier.rs  manifest.rs  manifest_list.rs  materialized_view_metadata.rs  mod.rs  namespace.rs  partition.rs  puffin.rs  schema.rs  snapshot.rs  sort.rs  table_metadata.rs  tabular.rs  types.rs  values.rs  view_metadata.rs
iceberg-rust-spec/testdata/table_metadata/: TableMetadataUnsupportedVersion.json  TableMetadataV3Valid.json  TableMetadataV3ValidMinimal.json
iceberg-rust/examples/: expire_snapshots.rs
iceberg-rust/src/: error.rs  lib.rs  object_store.rs  spec.rs  sql.rs  store.rs  util.rs
iceberg-rust/src/arrow/: mod.rs  partition.rs  read.rs  schema.rs  transform.rs  view.rs  write.rs
iceberg-rust/src/catalog/: bucket.rs  commit.rs  (+9 more)
iceberg-rust/tests/: catalog_crud_java_test.rs  delete_files_java_test.rs  empty_schema_manifest_test.rs  fast_append_test.rs  manifest_list_stats_java_test.rs  manifest_reader_writer_java_test.rs  manifest_writer_versions_java_test.rs  overwrite_java_test.rs  overwrite_test.rs  replace_partitions_java_test.rs  rewrite_files_java_test.rs  snapshot_expiration.rs  snapshot_manager_java_test.rs  snapshot_selection_loading_stats_java_test.rs  transaction_test.rs
iceberg-sql-catalog/: Cargo.toml
iceberg-sql-catalog/src/: lib.rs
iceberg_catalog_rest_client_rust/: Cargo.toml  README.md  rest-catalog-open-api.yaml
iceberg_catalog_rest_client_rust/.openapi-generator/: FILES
iceberg_catalog_rest_client_rust/docs/: CatalogApiApi.md  CatalogConfig.md  ConfigurationApiApi.md  CreateNamespace200Response.md  CreateNamespaceRequest.md  GetToken200Response.md  GetToken400Response.md  ListNamespaces200Response.md  ListTables200Response.md  LoadNamespaceMetadata200Response.md  MetadataLogInner.md  OAuth2ApiApi.md  ReportMetricsRequest.md  ScanReport.md  Snapshot.md  SnapshotLogInner.md  TableMetadata.md  UpdateNamespacePropertiesRequest.md  UpdateProperties200Response.md  UpdateTable200Response.md
iceberg_catalog_rest_client_rust/src/: catalog.rs  lib.rs
(+283 files in other folders)
