[workspace]
members = [
    "catalogs/iceberg-file-catalog",
    "catalogs/iceberg-glue-catalog",
    "catalogs/iceberg-rest-catalog",
    "catalogs/iceberg-s3tables-catalog",
    "catalogs/iceberg-sql-catalog",
    "datafusion-iceberg-sql",
    "datafusion_iceberg",
    "iceberg-rust",
    "iceberg-rust-spec",
]

resolver = "2"

[workspace.dependencies]
apache-avro = "0.18"
arrow = "57"
arrow-schema = "57"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
datafusion = "51"
datafusion-common = "51"
datafusion-execution = "51"
datafusion-expr = "51"
datafusion-functions = { version = "51", features = ["crypto_expressions"] }
datafusion-functions-aggregate = "51"
datafusion-sql = "51"
derive-getters = "0.5.0"
derive_builder = "0.20"
futures = "0.3.31"
getrandom = { version = "0.3.1", features = ["std"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
lru = "0.16.0"
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
murmur3 = { version = "0.5.2" }
parquet = { version = "57", features = ["async", "object_store"] }
pin-project-lite = "0.2"
regex = "1.11.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
sqlparser = { version = "0.59", features = ["visitor"] }
thiserror = "2"
tracing = "0.1"
tracing-futures = "0.2"
url = "^2.5"
uuid = { version = "1.13.2", features = ["serde", "v4"] }
