[package]
name = "datafusion-iceberg-sql"
version = "0.5.8"
edition = "2021"

description = "Apache Iceberg integration for Datafusion"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
iceberg-rust = { path = "../iceberg-rust", version = "0.5.8" }
datafusion-sql.workspace = true
datafusion-expr.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-functions.workspace = true
datafusion-functions-aggregate.workspace = true
arrow-schema.workspace = true
