[package]
name = "datafusion-iceberg-sql"
version = "0.9.0"
edition = "2021"

description = "Apache Iceberg integration for Datafusion"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
arrow-schema.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-expr.workspace = true
datafusion-functions.workspace = true
datafusion-functions-aggregate.workspace = true
datafusion-sql.workspace = true
iceberg-rust = { path = "../iceberg-rust", version = "0.9.0" }
