[package]
name = "datafusion_iceberg"
version = "0.4.0"
edition = "2021"

description = "Apache Iceberg integration for Datafusion"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
futures = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
chrono = { workspace = true }
object_store = { workspace = true }
iceberg-rust = { path = "../iceberg-rust", version = "0.4.0" }
itertools = { workspace = true }
dashmap = "5.4.0"
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["sync","rt-multi-thread"] }

[dev-dependencies]
tokio = "1"
iceberg-sql-catalog = { path = "../iceberg-sql-catalog" }
