[package]
name = "datafusion_iceberg"
version = "0.5.8"
edition = "2021"

description = "Datafusion integration for Iceberg table format"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
futures = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
chrono = { workspace = true }
object_store = { workspace = true }
iceberg-rust = { path = "../iceberg-rust", version = "0.5.8" }
itertools = { workspace = true }
dashmap = "5.4.0"
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
regex = "1.11.0"

[dev-dependencies]
tokio = "1"
iceberg-sql-catalog = { path = "../iceberg-sql-catalog" }
iceberg-rest-catalog = { path = "../iceberg-rest-catalog" }
testcontainers-modules = { version = "0.8.0", features = ["localstack", "postgres"] }
testcontainers = "0.20.0"
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tempfile = "3.10.1"
reqwest = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
