[package]
name = "datafusion_iceberg_catalog_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "18.0.0"
futures = "0.3.25"
tokio = "1.21"
anyhow = "1.0.66"
dashmap = "5.4.0"
datafusion_iceberg = { path = "../datafusion_iceberg" }
iceberg-rust = { path = "../iceberg-rust" }
async-trait = "0.1.64"

[dev-dependencies]
reqwest = "0.11.12"
iceberg_catalog_rest_client = { path = "../iceberg_catalog_rest_client_rust" }
