[package]
name = "datafusion_iceberg_catalog_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { workspace = true }
futures = { workspace = true }
tokio = "1.21"
anyhow = { workspace = true }
dashmap = "5.4.0"
datafusion_iceberg = { path = "../datafusion_iceberg" }
iceberg-rust = { path = "../iceberg-rust" }
async-trait = { workspace = true }

[dev-dependencies]
reqwest = "0.11.12"
iceberg_catalog_rest_client = { path = "../iceberg_catalog_rest_client_rust" }
