[package]
name = "iceberg-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceberg-rust = { path = "../iceberg-rust" }
iceberg_catalog_rest_client = { path = "../iceberg_catalog_rest_client_rust" }
object_store = { version = "0.5.2", features=["aws"]}
reqwest = { version = "0.11.14", features=["json", "multipart"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread"] } 

[build-dependencies]
cbindgen = "0.24.3"
