[package]
name = "iceberg-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceberg-rust = { path = "../iceberg-rust" }
iceberg_catalog_rest_client = { path = "../iceberg_catalog_rest_client_rust" }
object_store = { workspace = true }
reqwest = { version = "0.11.14", features=["json", "multipart"] }
serde_json = { workspace = true }
tokio = { version = "1.25.0", features = ["rt-multi-thread"] } 

[build-dependencies]
cbindgen = "0.24.3"
