[package]
name = "iceberg-rest-catalog"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors"]
description = "Defines the specification for the first version of the REST Catalog API. Implementations should ideally support both Iceberg table specs v1 and v2, with priority given to v2."
license = "Apache 2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = { version = "^3", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest-middleware = "0.2.0"
iceberg-rust = { path = "../iceberg-rust", version = "0.3.0" }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
