[package]
name = "iceberg-rest-catalog"
version = "0.5.8"
authors = ["Jan Kaul"]
description = "REST catalog for the unofficial Iceberg table format implementation"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_with = { version = "^3", default-features = false, features = ["base64", "std", "macros"] }
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
reqwest-middleware = "0.2.0"
iceberg-rust = { path = "../iceberg-rust", version = "0.5.8" }
object_store.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-futures.workspace = true

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
tokio = "1"
testcontainers = "0.16.7"
tracing-subscriber = "0.3"
