[package]
name = "iceberg-rust-spec"
version = "0.5.8"
edition = "2021"

license = "Apache-2.0"

description = "Unofficial implementation of the Iceberg table format specification"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
murmur3 = "0.5.2"
getrandom = "0.2.8"
ordered-float = { version = "4.1.0", features = ["serde"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.10"
serde_bytes = "0.11.8"
rust_decimal = "1.27.0"
uuid = { version = "1.3.2", features = ["serde", "v4", "v1"] }
url = { workspace = true }
derive_builder = "0.12.0"
thiserror = { workspace = true }
derive-getters = { workspace = true }
