[package]
name = "iceberg-rust-spec"
version = "0.9.0"
edition = "2021"

license = "Apache-2.0"

description = "Unofficial implementation of the Iceberg table format specification"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
derive-getters = { workspace = true }
derive_builder = { workspace = true }
getrandom = { workspace = true }
itertools = { workspace = true }
murmur3 = { workspace = true }
ordered-float = { version = "5.0.0", features = ["serde"] }
rust_decimal = "1.36.0"
serde = { workspace = true }
serde_bytes = "0.11.15"
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.19"
thiserror = { workspace = true }
url = { workspace = true }
uuid = { version = "1.13.2", features = ["serde", "v4", "v1"] }
