[package]
name = "iceberg-rust"
version = "0.4.0"
edition = "2021"

description = "Rust implementation of Apache Iceberg"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
apache-avro = "0.16.0"
arrow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
getrandom = "0.2.8"
itertools = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tokio = { version = "1.0", features = ["sync"] }
derive_builder = "0.12.0"
sqlparser = { workspace = true }
thrift = { version = "0.17.0", default-features = false }
thiserror = { workspace = true }
derive-getters = { workspace = true }
iceberg-rust-spec = { path = "../iceberg-rust-spec", version = "0.4.0" }

