[package]
name = "iceberg-rust"
version = "0.9.0"
edition = "2021"

description = "Unofficial rust implementation of the Iceberg table format"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
apache-avro = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
derive-getters = { workspace = true }
derive_builder = { workspace = true }
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
futures = { workspace = true }
getrandom = { workspace = true }
iceberg-rust-spec = { path = "../iceberg-rust-spec", version = "0.9.0" }
itertools = { workspace = true }
lazy_static = { workspace = true }
lru = { workspace = true }
murmur3 = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
smallvec = { version = "1.14.0", features = ["const_generics"] }
sqlparser = { workspace = true }
thiserror = { workspace = true }
thrift = { version = "0.17.0", default-features = false }
tracing = { workspace = true }
tokio = { version = "1.43", features = ["sync"] }
url = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
rstest = "0.23.0"
chrono = { workspace = true }
iceberg-sql-catalog = { path = "../catalogs/iceberg-sql-catalog" }
