[package]
name = "iceberg-sql-catalog"
version = "0.5.8"
edition = "2021"

description = "Sql catalog for the unofficial Iceberg table format implementation"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[features]
default = ["runtime-tokio"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
iceberg-rust = { path = "../iceberg-rust", version = "0.5.8" }
object_store.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
thiserror.workspace = true
url.workspace = true
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
tokio = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
