[package]
name = "iceberg_catalog_rest_client"
version = "0.0.2"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
description = "Defines the specification for the first version of the Iceberg REST Catalog API. Implementations should ideally support both Iceberg table specs v1 and v2, with priority given to v2."
license = "Apache-2.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
iceberg-rust = { path = "../iceberg-rust" }
async-trait = "0.1.58"
anyhow = "1.0.66"
futures = "0.3.25"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]


[dev-dependencies]
tokio = "1.0"
