[package]
name = "iceberg_catalog_rest_client"
version = "0.0.2"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
description = "Defines the specification for the first version of the Iceberg REST Catalog API. Implementations should ideally support both Iceberg table specs v1 and v2, with priority given to v2."
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { version = "^1.0", features = ["serde"] }
iceberg-rust = { path = "../iceberg-rust" }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]


[dev-dependencies]
tokio = "1.0"
