[package]
name = "iceberg-glue-catalog"
version = "0.9.0"
edition = "2021"

description = "Glue catalog for the unofficial Iceberg table format implementation"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
async-trait.workspace = true
aws-config = { version = "1.5.16", default-features = false, features = [
    "rt-tokio",
    "default-https-client",
    "behavior-version-latest",
    "sso",
] }
aws-sdk-glue = { version = "1.82.0", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
    "behavior-version-latest",
] }
futures.workspace = true
iceberg-rust = { path = "../../iceberg-rust", version = "0.9.0" }
object_store.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid = { version = "1.13.2", features = ["v4"] }

[dev-dependencies]
datafusion.workspace = true
datafusion_iceberg = { path = "../../datafusion_iceberg", version = "0.9.0" }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["localstack"] }
tokio = "1"
