[package]
name = "iceberg-rest-catalog"
version = "0.6.1"
authors = ["Jan Kaul"]
description = "REST catalog for the unofficial Iceberg table format implementation"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_with = { version = "^3", default-features = false, features = ["base64", "std", "macros"] }
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
iceberg-rust = { path = "../../iceberg-rust", version = "0.6.1" }
object_store.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
derive_builder = { workspace = true }

[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json", "multipart", "rustls-tls-manual-roots"]

[dev-dependencies]
tokio = "1"
testcontainers = "0.20"
testcontainers-modules = { version = "0.8.0", features = ["localstack"] }
tracing-subscriber = "0.3"
datafusion_iceberg = { path = "../../datafusion_iceberg" , version = "0.6.1" }
datafusion.workspace = true
