[package]
name = "iceberg-rest-catalog"
version = "0.10.0"
authors = ["Jan Kaul"]
description = "REST catalog for the unofficial Iceberg table format implementation"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
aws-credential-types = "1"
aws-sigv4 = "1"
derive_builder = { workspace = true }
futures.workspace = true
iceberg-rust = { path = "../../iceberg-rust", version = "0.10.0" }
object_store.workspace = true
secrecy = "0.10"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_repr = "^0.1"
serde_with = { version = "^3", default-features = false, features = ["base64", "std", "macros"] }
tracing.workspace = true
tracing-futures.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
datafusion.workspace = true
datafusion_iceberg = { path = "../../datafusion_iceberg", version = "0.10.0" }
iceberg-rust = { path = "../../iceberg-rust", version = "0.10.0", features = ["test-utils"] }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["localstack"] }
tokio = "1"
tracing-subscriber = "0.3"

[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json", "multipart", "rustls-tls-manual-roots"]

