[package]
name = "iceberg-s3tables-catalog"
version = "0.9.0"
edition = "2021"

description = "S3Tables catalog for the unofficial Iceberg table format implementation"

license = "Apache-2.0"

repository = "https://github.com/JanKaul/iceberg-rust"

[dependencies]
async-trait.workspace = true
aws-config = "1.5.16"
aws-sdk-s3tables = "1.10.0"
futures.workspace = true
iceberg-rust = { path = "../../iceberg-rust", version = "0.9.0" }
object_store.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid = { version = "1.13.2", features = ["v4"] }

[dev-dependencies]
datafusion.workspace = true
datafusion_iceberg = { path = "../../datafusion_iceberg", version = "0.9.0" }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["localstack"] }
tokio = "1"
